--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "lib/index.js",
   "scripts": {
     "lint": "tslint src/**/*.ts",
-    "start": "webpack --watch --progress --config webpack.config.js",
+    "start": "npm-run-all --parallel start:live-server start:webpack-watch",
+    "start:live-server": "live-server",
+    "start:webpack-watch": "webpack --watch",
     "stats": "webpack --json --config webpack.config.js > stats.json"
   },
   "repository": {
@@ -30,6 +32,8 @@
     "io-ts-types": "^0.3.0",
     "monocle-ts": "^1.0.0",
     "newtype-ts": "^0.2.0",
+    "preact": "^8.3.1",
+    "preact-compat": "^3.18.4",
     "todomvc-app-css": "2.1.0"
   },
   "devDependencies": {
@@ -39,10 +43,13 @@
     "@types/react": "16.0.27",
     "@types/react-dom": "16.0.3",
     "awesome-typescript-loader": "3.4.1",
+    "live-server": "^1.2.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.13.5",
+    "serve": "^10.1.1",
     "tslint": "4.4.2",
     "tslint-config-standard": "4.0.0",
-    "typescript": "^2.9.1",
+    "typescript": "^3.2.1",
     "webpack": "3.10.0"
   },
   "tags": [],
